Bug 779351 - Camera needs to get/configure the SourceMediaStream on the main thread, r=roc