dom/camera/CameraPreview.h
@@ -23,7 +23,7 @@ class CameraPreview : public nsDOMMediaStream
 public:
   NS_DECL_ISUPPORTS
 
-  CameraPreview(PRUint32 aWidth, PRUint32 aHeight);
+  CameraPreview(nsIThread* aCameraThread, PRUint32 aWidth, PRUint32 aHeight);
 
   void SetFrameRate(PRUint32 aFramesPerSecond);
 
@@ -32,8 +32,11 @@ public:
     return nsDOMMediaStream::GetCurrentTime(aCurrentTime);
   }
 
-  virtual void Start() = 0;
-  virtual void Stop() = 0;
+  void Start();
+  void Stop();
+
+  virtual nsresult StartImpl() = 0;
+  virtual nsresult StopImpl() = 0;
 
 protected:
   virtual ~CameraPreview();
@@ -45,6 +48,7 @@ protected:
   nsRefPtr<mozilla::layers::ImageContainer> mImageContainer;
   VideoSegment mVideoSegment;
   PRUint32 mFrameCount;
+  nsCOMPtr<nsIThread> mCameraThread;
 
   enum { TRACK_VIDEO = 1 };
 
